--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Test/Message.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Test/Message.cshtml
@@ -3,31 +3,55 @@
 @{
 	Layout = null;
 }
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<title>@Model.Title</title>
-	</head>
-	<style>
-		body {
-			padding: 30px;
-			text-align: center;        
-		}
-		h1{
-			padding: 40px;
-			background-color: #333355;
-			border-radius: 10px;
-			border-top: 2px solid #000033;
-			border-left: 2px solid #000033;
-			border-bottom: 2px solid #bbbbff;
-			border-bottom: 2px solid #bbbbff;
-			text-shadow: 2px 2px 1px #000033, -1px -1px 0px #ddddff;
-			color: #bbbbff;
-			font-family: Verdana;
-			font-size: 20px;
-		}
-	</style>
-	<body>
+    <head>
+        <title>@Model.Title</title>
+    </head>
+    <style>
+        body {
+            font-family: Helvetica;
+            padding: 30px;
+        }
+        .frame {
+            padding: 20px;
+            background-color: #ddffdd;
+            border-radius: 4px;
+            border: 1px solid #00ff00;
+            color: #555555;
+        }
+        .frame h1 {
+            margin-left: 20px;
+            font-size: 18px;
+        }
+        .inset {
+            margin-top: 23px;
+            border: 1px solid #00ff00;
+            border-radius: 4px;
+            background: white;
+            padding: 10px;
+        }
+        .inset ul {
+            padding-left: 40px;
+            list-style-type: circle;
+            line-height: 20px;
+            font-size: 12px;
+        }
+    </style>
+    <body>
+        <div class="frame">
 		<h1>@Model.Message</h1>
-	</body>
+		@if (Model.ListItems.Any())
+		{
+			<div class="inset">
+				<ul>
+					@foreach (var item in Model.ListItems)
+					{
+						<li>@item</li>
+					}
+				</ul>
+			</div>
+		}
+        </div>
+    </body>
 </html>​
