--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -6,14 +6,13 @@
 @model WeekScheduleViewModel
 @{
 	const int scheduleHeight = 668;
-	const double dimmed = 0.3;
 	Layout = null;
 }
 <div id="ScheduleWeek-body" class="body-weekview clearfix" data-mytime-periodselection='@Html.Schedule().PeriodSelectionAsJson(Model.PeriodSelection)'>
 	<style>
 		@foreach (var style in Model.Styles)
 		{
-			@string.Format("li.third.{0} {{background-color: rgba({1},{2});}}\n", style.Name, ColorTranslator.FromHtml(style.ColorHex).ToCSV(), dimmed)
+			@string.Format("li.third.{0} {{background-color: rgba({1},0.3);}}\n", style.Name, ColorTranslator.FromHtml(style.ColorHex).ToCSV())
 		}
 	</style>
 	<div id="ScheduleWeek-body-inner" class="body-weekview-inner clearfix">
@@ -60,8 +59,8 @@
 				<li class="weekview-day-schedule relative">
 					@foreach (var period in day.Periods)
 					{
-						var topPixel = Math.Round(scheduleHeight*period.StartPositionPercentage);
-						var bottomPixel = Math.Round(scheduleHeight*period.EndPositionPercentage) - 1;
+						var topPixel = Math.Round(scheduleHeight * period.StartPositionPercentage);
+						var bottomPixel = Math.Round(scheduleHeight * period.EndPositionPercentage) - 1;
 						var heightPixel = bottomPixel - topPixel;
 
 						const int pixelToDisplayAll = 32;
@@ -70,7 +69,7 @@
 
 						<div @(heightPixel < pixelToDisplayAll ? @Html.Raw("class=\"week-schedule-layer absolute tooltip\"") : @Html.Raw("class=\"week-schedule-layer absolute\"")) 
 							tooltip-title="@period.Title" tooltip-text="@tooltipText" 
-							style="background-color: @string.Format("rgba({0},{1})", period.Color, dimmed); height: @(heightPixel)px; top: @(topPixel)px;">
+							style="background-color: @string.Format("rgba({0},0.3)", period.Color); height: @(heightPixel)px; top: @(topPixel)px;">
 							
 							<strong @(heightPixel > pixelToDisplayTitle ? @Html.Raw("class=\"truncate\"") : @Html.Raw("class=\"truncate displaynone\""))>@period.Title</strong>
 							<span @(heightPixel < pixelToDisplayAll ? @Html.Raw("class=\"fullwidth displaynone\"") : @Html.Raw("class=\"fullwidth displayblock\""))>@period.TimeSpan</span>
