--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
@@ -77,7 +77,7 @@
 			@Resources.FullDay
 		</label>
 		<input id="Request-detail-ok-button" type="button" class="button mb5 floatright" update-value="@Html.AttributeEncode(Resources.Update)" new-value="@Html.AttributeEncode(Resources.SubmitRequest)"/>
-		<div id="Request-detail-error" class="error clearleftfloat"></div>
+		<div id="Request-detail-error" class="error edit-module-element floatleft clearleftfloat"></div>
 	</div>
 	<div class="request-list">
 		<div id="friendly-message" class="friendly-message ui-corner-all floatleft" style="display: none;">
@@ -93,12 +93,12 @@
 				<div class="request-details">
 					<div>
 						<span class="request-caption">@Resources.Type: </span>
-						<span class="request-data-type pdr20"></span>
+						<span class="request-data-type"></span>
 						<span class="request-caption">@Resources.Status: </span>
 						<span class="request-data-status"></span>
 					</div>
 					<span class="request-caption">@Resources.Date: </span>
-					<span class="request-data-date pdr20"></span>
+					<span class="request-data-date"></span>
 					<span class="request-caption">@Resources.UpdatedOn: </span>
 					<span class="request-data-updatedon"></span>
 				</div>
