--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -156,6 +156,6 @@
 	<div class="edit-module-element clearleftfloat">
 		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.SubmitRequest)"/>
 	</div>
-	<div id="Schedule-addRequest-error" class="error clearleftfloat"></div>
+	<div id="Schedule-addRequest-error" class="error edit-module-element floatleft clearleftfloat"></div>
 </div>
 
