--- a/Teleopti.Ccc.WpfControls/Controls/DateTimePeriodControl/EditableStartTimeOfDayView.xaml
+++ b/Teleopti.Ccc.WpfControls/Controls/DateTimePeriodControl/EditableStartTimeOfDayView.xaml
@@ -1,5 +1,5 @@
 ﻿<!--Uses DatTimeperiodViewModel as DataContext-->
-    <UserControl x:Class="Teleopti.Ccc.WpfControls.Controls.DateTimePeriodControl.EditableStartTimeOfDayView"
+<UserControl x:Class="Teleopti.Ccc.WpfControls.Controls.DateTimePeriodControl.EditableStartTimeOfDayView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:GuiHelpers="clr-namespace:Teleopti.Ccc.WinCode.Common.GuiHelpers;assembly=Teleopti.Ccc.WinCode"
@@ -19,17 +19,28 @@
             </DataTemplate>
         </ResourceDictionary>
     </UserControl.Resources>
+        
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="15"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-       
-       
 
-        <ComboBox IsEditable="True" ItemsSource="{Binding Path=SelectableStartTimes}"  Grid.ColumnSpan="2"
+
+
+        <ComboBox IsEditable="True" ItemsSource="{Binding Path=SelectableStartTimes}" Grid.ColumnSpan="2"
                   KeyboardNavigation.ControlTabNavigation="Continue"
-                  KeyboardNavigation.TabIndex="0"/>
+                  KeyboardNavigation.TabIndex="0">
+            <ComboBox.SelectedItem>
+                     <MultiBinding Converter="{StaticResource startDateTimeToLocalStringConverter}" ConverterParameter="{StaticResource TimeMode}" Mode="TwoWay">
+                        <MultiBinding.Bindings>
+                            <Binding Path="Start"/>
+                            <Binding RelativeSource="{RelativeSource Self}" Path="(GuiHelpers:VisualTreeTimeZoneInfo.TimeZoneInfo)"/>
+                        </MultiBinding.Bindings>
+                    </MultiBinding>
+            </ComboBox.SelectedItem>
+        </ComboBox>
+        
         <TextBox Grid.Column="0">
 
             <TextBox.Text>
