change adding request area in schedule page, now click the symbol will navigate to request page.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
@@ -406,6 +406,7 @@ html.full-height #push{
 
 .text-request {
 	right: 0px;
+	cursor: pointer;
 }
 .icon-left{padding-left: 25px; border: 0px; background-color: transparent; }
 button.icon-left{padding-left: 35px;}
