--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
@@ -107,7 +107,7 @@
 
 .weekview-day .icon.comment-day 
 {
-	background: transparent url(../Images/icon_sprite.png) -163px -4px no-repeat;
+	background: transparent url(../Images/icon_sprite.png) -158px -4px no-repeat;
 	left: 5px;
 	height: 16px;
 }
@@ -261,6 +261,10 @@ select.absence-input
 }
 .fourth {
 	height: 15px;
+}
+.fourth .add-request-space {
+	height: 100%; 
+	width: 100%;
 	cursor: pointer;
 }
 .category 
