--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -43,17 +43,17 @@
 					@day.Summary.Summary
 					
 				</li>
-				<li id="day-summary" @(Model.RequestPermission.TextRequestPermission ? @Html.Raw("class=\"add-text-request fourth\"") : @Html.Raw("class=\"fourth\""))>
-					<span class="text-request floatright" @(day.TextRequestCount > 0 ? "" : "style=display:none") title="@(string.Format(Resources.XRequests, day.TextRequestCount))">
-						<span class="floatright extrasmall">@day.TextRequestCount</span>
-						<span class="icon text-request ir floatright" />
-					</span>
+				<li id="day-summary" class="fourth">
+					<div class="text-request floatright" @(day.TextRequestCount > 0 ? "" : "style=display:none") title="@(string.Format(Resources.XRequests, day.TextRequestCount))">
+						<div class="floatright extrasmall">@day.TextRequestCount</div>
+						<div class="icon text-request ir floatright" />
+					</div>
 					@if (day.HasNote)
 					{
-						<span class="icon comment-day ir tooltip floatright" tooltip-text="@day.Note.Message">
-						</span>
+						<div class="icon comment-day ir tooltip floatright" tooltip-text="@day.Note.Message">
+						</div>
 					}
-					<div class="add-request-space"></div>
+					<div @(Model.RequestPermission.TextRequestPermission ? @Html.Raw("class=\"add-request-space\"") : @Html.Raw("class=\"\""))></div>
 				</li>
 				<li class="weekview-day-schedule relative">
 					@foreach (var period in day.Periods)
