--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -69,7 +69,7 @@
 
 	@RenderSection("head", required: false)
 </head>
-<body @Html.LayoutBase().FullDirClass()@Html.LayoutBase().FullDirAttribute()>
+<body @Html.LayoutBase().FullDirAndLangClass()@Html.LayoutBase().FullDirAttribute()>
 	@RenderSection("header", required: false)
 	@RenderBody()
 	<footer class="col-1"> 
