--- a/Teleopti.Ccc.WpfControls/Controls/Messaging/Views/FollowUpPushMessageDialogueView.xaml
+++ b/Teleopti.Ccc.WpfControls/Controls/Messaging/Views/FollowUpPushMessageDialogueView.xaml
@@ -95,7 +95,8 @@
 
                     <TextBox Grid.Row="1" Grid.Column="1" 
                              Text="{Binding Path=ReplyText,UpdateSourceTrigger=PropertyChanged}" 
-                             MinWidth="150" />
+                             MinWidth="150"
+							 MaxLength="255"/>
                 </Grid>
             </GroupBox>
         </Expander.Content>
