--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -2,7 +2,6 @@
 @using Teleopti.Ccc.UserTexts
 @using Teleopti.Ccc.Web.Areas.MyTime.Core
 @using Teleopti.Ccc.Web.Areas.MyTime.Models.WeekSchedule
-@using Teleopti.Interfaces.Domain
 @model WeekScheduleViewModel
 @{
 	const int scheduleHeight = 668;
@@ -83,76 +82,4 @@
 	</div>
 </div>
 
-
-<div id="Schedule-addRequest-title" class="displaynone">
-	<span id="Text-request-tab" class="selectable-tab selected-tab">@Resources.TextRequest</span>
-	@if (Model.RequestPermission.AbsenceRequestPermission)
-	{
-		<span>|</span>
-		<span id="Absence-request-tab" class="selectable-tab">@Resources.AbsenceRequest</span>
-	}
-</div>
-
-<div class="displaynone" id="Schedule-addRequest-cancel-button">@Resources.Cancel</div>
-<div class="displaynone" id="Schedule-addRequest-default-start-time">@TimeHelper.TimeOfDayFromTimeSpan(new TimeSpan(0, 0, 0))</div>
-<div class="displaynone" id="Schedule-addRequest-default-end-time">@TimeHelper.TimeOfDayFromTimeSpan(new TimeSpan(23, 59, 0))</div>
-
-<div id="Schedule-addRequest-section" class="displaynone ui-corner-all">
-	<div class="edit-module-element">
-		<label class="displayblock" for="Schedule-addRequest-subject-input">@Resources.Subject</label>
-		<input id="Schedule-addRequest-subject-input" type="text"/>
-	</div>
-	<div class="edit-module-element">
-		<label class="displayblock" for="Schedule-addRequest-message-input">@Resources.Message</label>
-		<textarea id="Schedule-addRequest-message-input" />
-	</div>
-	<div id="Absence-type-element" class="floatleft displaynone">
-		<div class="edit-module-element floatleft">
-			<div class="floatleft absence-input-label">@Resources.AbsenceType</div>
-		</div>
-		<div class="edit-module-element floatleft">
-			<select id="Absence-type" class="floatleft absence-input combobox tooltip-dropdown-menu">
-				@foreach (var absenceType in Model.AbsenceTypes)
-				{
-					<option value="@Html.AttributeEncode(absenceType.Id)">@absenceType.Name</option>
-				}
-			</select>
-		</div>
-	</div>
-	<div class="edit-module-element floatleft">
-		<input id="Schedule-addRequest-fromDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()" />
-	</div>
-	<div id="Schedule-addRequest-fromTime" class="edit-module-element floatleft">
-		<label class="displayblock" for="Schedule-addRequest-fromTime-input-input">@Resources.Time</label>
-		<select id="Schedule-addRequest-fromTime-input" class="time-input combobox tooltip-dropdown-menu">
-			@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x * 30, 0)))
-			{
-				<option @(timeSpan.Hours == 8 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
-			}
-		</select>
-	</div>
-	<div class="edit-module-element clearleftfloat floatleft">
-		<input id="Schedule-addRequest-toDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()"  />
-	</div>
-	<div id="Schedule-addRequest-toTime" class="edit-module-element floatleft">
-		<label class="displayblock" for="Schedule-addRequest-toTime-input-input">@Resources.Time</label>
-		<select id="Schedule-addRequest-toTime-input" class="time-input combobox tooltip-dropdown-menu">
-			@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x * 30, 0)))
-			{
-				<option @(timeSpan.Hours == 17 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
-			}
-		</select>
-	</div>
-	<span class="edit-module-element clearleftfloat floatleft">
-		<input class="clearleftfloat floatleft" type="checkbox" id="Fullday-check" data-bind="checked:IsFullDay"/>
-		<label class="floatleft pdl5" for="Fullday-check">
-			@Resources.FullDay
-		</label>
-	</span>
-	
-	<div class="edit-module-element clearleftfloat">
-		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.SubmitRequest)"/>
-	</div>
-	<div id="Schedule-addRequest-error" class="error edit-module-element floatleft clearleftfloat"></div>
-</div>
-
+@Html.Partial("WeekRequestPartial", Model)
