remove duplicate code

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
@@ -744,13 +744,9 @@ select.time-input
 {
 	width: 8.5em;
 }
-select.time-input
-{
-    width: 110px;
-}
 .rtl select.time-input
 {
-    width: 110px;
+    width: 8.5em;
 }
 .rtl .time-input
 {
