--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
@@ -1,9 +1,31 @@
 ﻿
 .preference 
 {
-	font-weight: bold;
-	overflow: hidden;
-	height: 16px;
+    height: 20px;
+	xwidth: 106px;
+}
+.preference-text 
+{
+    float: left;
+    font-weight: bold;
+    height: 15px;
+    max-width: 97px;
+    overflow: hidden;
+}
+.extended-indication 
+{
+    float: left;
+    position: relative;
+    top: -2px;
+    margin-left: 4px;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-top: 0px;
+    padding-bottom: 3px;
+    border-radius: 4px;
+    border: 1px solid lightgray;
+	cursor: pointer;
+
 }
 
 .calendarview-week li.modified div.day-content
