--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Teleopti.Ccc.UserTexts
 @using Teleopti.Ccc.Web.Areas.MyTime.Core
 @using Teleopti.Ccc.Web.Areas.MyTime.Models.Preference
-@model PreferenceViewModel
+@model Teleopti.Ccc.Web.Areas.MyTime.Models.Preference.PreferenceViewModel
 @{
 	Layout = null;
 }
@@ -56,12 +56,12 @@
 		
 	<div id="Preference-body-inner" class="body-calendarview-inner clearfix">
 		<ul class="weekdays">
-			@foreach (WeekDayHeader weekDayName in Model.WeekDayHeaders)
+			@foreach (var weekDayName in Model.WeekDayHeaders)
 			{
 				<li>@weekDayName.Title</li>
 			}
 		</ul>
-		@foreach (WeekViewModel week in Model.Weeks)
+		@foreach (var week in Model.Weeks)
 		{
 			<ul class="calendarview-week" onselectstart="return false;">
 				<li>
@@ -69,13 +69,13 @@
 
 					</div>
 				</li>
-				@foreach (DayViewModel day in week.Days)
+				@foreach (var day in week.Days)
 				{
-					PreferenceDayViewModel preference = day.Preference;
-					PersonAssignmentDayViewModel personAssignment = day.PersonAssignment;
-					DayOffDayViewModel dayOff = day.DayOff;
-					AbsenceDayViewModel absence = day.Absence;
-					<li class="relative @(day.InPeriod ? "inperiod": "") @(day.Feedback ? "feedback" : "") @(day.Editable ? "editable" : "non-editable") @Html.AttributeEncode(day.StyleClassName)" data-mytime-date="@Html.Schedule().FormatDate(day.Date)">
+					var preference = day.Preference;
+					var personAssignment = day.PersonAssignment;
+					var dayOff = day.DayOff;
+					var absence = day.Absence;
+					<li class="relative @(day.InPeriod ? "inperiod" : "") @(day.Feedback ? "feedback" : "") @(day.Editable ? "editable" : "non-editable") @Html.AttributeEncode(day.StyleClassName)" data-mytime-date="@Html.Schedule().FormatDate(day.Date)">
 						<div>
 							<div class="day-header">
 								<span class="floatleft ml5">@day.Header.DayDescription</span><span class="floatright mr5">@day.Header.DayNumber</span>
@@ -83,7 +83,12 @@
 							<div class="day-content pdt10" style="border-left-color: @day.BorderColor" data-bind="style: { borderLeftColor: Color() }">
 								@if (preference != null)
 								{
-									<div class="preference" data-bind="text: Preference">@preference.Preference</div>
+									<div class="preference">
+										<span class="displayinline-block">
+											<div class="preference-text" data-bind="text: Preference">@preference.Preference</div>
+											<div class="extended-indication" style="display: none" data-mytime-visible="@preference.Extended.ToString().ToLower()" data-bind="visible: Extended">&raquo;</div>
+										</span>
+									</div>
 									<div class="feedback-error truncate" data-bind="text: FeedbackError"></div>
 									<div class="possible-start-times icon leftarrow truncate" data-bind="text: PossibleStartTimes"></div>
 									<div class="possible-end-times icon rightarrow truncate" data-bind="text: PossibleEndTimes"></div>
