--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -16,7 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/themes/base/jquery.qtip.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/Content/Scripts/jquery.qtip.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/Site.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/TeamSchedule.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/Request.css")" rel="stylesheet" type="text/css" />
