--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TooltipCustom.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TooltipCustom.css
@@ -1,8 +1,13 @@
 ﻿
 .ui-tooltip-custom 
 {
-	font-size: 12px;
 	border-color: rgb(200, 200, 200);
 	background-color: rgb(255,255,255);
+}
+
+.ui-tooltip-custom .ui-tooltip-content
+{
 	padding: 5px;
+	font-size: 12px;
+	line-height: 18px;
 }
