--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -71,7 +71,6 @@
 				</li>
 				@foreach (var day in week.Days)
 				{
-					var preference = day.Preference;
 					var personAssignment = day.PersonAssignment;
 					var dayOff = day.DayOff;
 					var absence = day.Absence;
@@ -81,32 +80,32 @@
 								<span class="floatleft ml5">@day.Header.DayDescription</span><span class="floatright mr5">@day.Header.DayNumber</span>
 							</div>
 							<div class="day-content pdt10" style="border-left-color: @day.BorderColor" data-bind="style: { borderLeftColor: Color() }">
-								@if (preference != null)
+								@if (day.Preference)
 								{
 									<div class="preference">
 										<span class="displayinline-block">
-											<div class="preference-text" data-bind="text: Preference">@preference.Preference</div>
-											<div class="extended-indication" style="display: none" data-mytime-visible="@preference.Extended.ToString().ToLower()" data-bind="visible: Extended">&raquo;</div>
+											<div class="preference-text" data-bind="text: Preference"></div>
+											<div class="extended-indication" style="display: none" data-bind="visible: Extended">&raquo;</div>
 											<div class="extended-panel" style="display: none">
 												<div class="extended-part">
 													<div class="extended-part-title">Extended</div>
-													<div class="possible-start-times icon leftarrow truncate">10:00 am-10:30 am</div>
-													<div class="possible-end-times icon rightarrow truncate">5:00 pm-6:00pm</div>
-													<div class="possible-contract-times icon doublearrow-blue truncate">6:30-8:00</div>
+													<div class="time-limitation icon leftarrow truncate">10:00 am-10:30 am</div>
+													<div class="time-limitation icon rightarrow truncate">5:00 pm-6:00 pm</div>
+													<div class="time-limitation icon doublearrow-blue truncate">6:30-8:00</div>
 												</div>
 												<div class="extended-part">
 													<div class="extended-part-title">Lunch</div>
-													<div class="possible-start-times icon leftarrow truncate">11:00 am-12:00 am</div>
-													<div class="possible-end-times icon rightarrow truncate">13:00 pm-14:00pm</div>
-													<div class="possible-contract-times icon doublearrow-blue truncate">1:00-3:00</div>
+													<div class="time-limitation icon leftarrow truncate">11:00 am-12:00 am</div>
+													<div class="time-limitation icon rightarrow truncate">13:00 pm-14:00 pm</div>
+													<div class="time-limitation icon doublearrow-blue truncate">1:00-3:00</div>
 												</div>
 											</div>
 										</span>
 									</div>
 									<div class="feedback-error truncate" data-bind="text: FeedbackError"></div>
-									<div class="possible-start-times icon leftarrow truncate" data-bind="text: PossibleStartTimes"></div>
-									<div class="possible-end-times icon rightarrow truncate" data-bind="text: PossibleEndTimes"></div>
-									<div class="possible-contract-times icon doublearrow-blue truncate" data-bind="text: PossibleContractTimes"></div>
+									<div class="possible-start-times time-limitation icon leftarrow truncate" data-bind="text: PossibleStartTimes"></div>
+									<div class="possible-end-times time-limitation icon rightarrow truncate" data-bind="text: PossibleEndTimes"></div>
+									<div class="possible-contract-times time-limitation icon doublearrow-blue truncate" data-bind="text: PossibleContractTimes"></div>
 								}
 								@if (personAssignment != null)
 								{
