--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
@@ -37,10 +37,13 @@
 }
 .extended-part-title {
 	font-weight: bold;
-	height: 24px;
+	height: 14px;
+	margin-bottom: 10px;
 }
-
-
+.extended-part-no-title {
+	height: 14px;
+	margin-bottom: 10px;
+}
 
 .calendarview-week li.modified div.day-content
 {
