--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -88,13 +88,13 @@
 											<div class="extended-indication" style="display: none" data-bind="visible: Extended">&raquo;</div>
 											<div class="extended-panel" style="display: none">
 												<div class="extended-part">
-													<div class="extended-part-title" data-bind="text: ExtendedTitle">Extended</div>
+													<div class="extended-part-title" data-bind="text: ExtendedTitle"></div>
 													<div class="time-limitation icon leftarrow truncate" data-bind="text: StartTimeLimitation"></div>
 													<div class="time-limitation icon rightarrow truncate" data-bind="text: EndTimeLimitation"></div>
 													<div class="time-limitation icon doublearrow-blue truncate" data-bind="text: WorkTimeLimitation"></div>
 												</div>
 												<div class="extended-part">
-													<div class="extended-part-title" data-bind="text: Activity">Lunch</div>
+													<div class="extended-part-title" data-bind="text: Activity"></div>
 													<div class="time-limitation icon leftarrow truncate" data-bind="text: ActivityStartTimeLimitation"></div>
 													<div class="time-limitation icon rightarrow truncate" data-bind="text: ActivityEndTimeLimitation"></div>
 													<div class="time-limitation icon doublearrow-blue truncate" data-bind="text: ActivityTimeLimitation"></div>
