--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
@@ -1,7 +1,7 @@
 ﻿
 .preference 
 {
-    height: 20px;
+    height: 30px;
 }
 .preference-text 
 {
@@ -76,6 +76,7 @@
 .time-limitation.icon.rightarrow,
 .time-limitation.icon.doublearrow-blue
 {
+	display: block;
 	width: 110px;
 	height: 13px;
 }
