fix for testissue 20245

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CalendarView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CalendarView.css
@@ -49,7 +49,7 @@
 .calendarview-week li{
 	font-size: 12px;
 	display: inline-block;
-	min-height: 115px;
+	height: 117px;
 	vertical-align: top;
 	width: 130px;
 }
