--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
@@ -18,12 +18,25 @@
 	 background-repeat: repeat-x;
 }
 
-.body-weekview{background: #f8f8f8 url(../Images/view_repeater_bg.png) bottom left repeat-y;}
-.body-weekview-inner{background: transparent url(../Images/view_top_bg.png) top left no-repeat; font-size: 0;}
-.body-weekview-inner ul.today{background-position: 0 0; text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);}
+.body-weekview {
+	background: #f8f8f8 url(../Images/view_repeater_bg.png) bottom left repeat-y;
+}
+.body-weekview-inner {
+	background: transparent url(../Images/view_top_bg.png) top left no-repeat;
+	font-size: 0;
+	white-space: nowrap;
+}
+.body-weekview-inner ul.today {
+	background-position: 0 0;
+	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);
+}
 
-.body-weekview-inner ul.ui-selected{background-position: 0 -2000px;}
-.body-weekview-inner ul:first-child{margin-left: 19px;}
+.body-weekview-inner ul.ui-selected {
+	background-position: 0 -2000px;
+}
+.body-weekview-inner ul:first-child {
+	margin-left: 19px;
+}
 
 .weekview-day
 {
