--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Asm/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Asm/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Teleopti.Ccc.Web.Areas.MyTime.Models.Asm
 @model AsmViewModel
 @{
-	double pixelsPerMinute = 1;
+	const double pixelsPerMinute = 0.3;
 }
 <style>
 	div.asm-layer
